Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52121

Cookies are not saved

XMLWordPrintable

      Not sure if this is related, but cookie file seems to have a typo. I get a file named "Coookies".

      Chromium seems to have a file named Cookies.

      How ever, I am not sure if it is even used in WebEngine as I managed to make it permanently save a cookie once, but not in that file as it is still empty sqlite3 database.

      To reproduce:

      • run attached example
      • write something to the field
      • press save
      • restart the application

      Outcome:

      • field is empty

      Expected:

      • field should have previously set value

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            michal Michal Klocek
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes