Fix saving cookies

Release CookieStore in URLRequestContextGetterQt destructor,
this will eventually delete CookieMonsterDelegateQt and
trigger commit of cookies in cookie store backend.

Task-bumber: QTBUG-52121
Change-Id: Ic83c7ee3ece1c64ac9e47cba5dcf40e084d9c3dc
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@theqtcompany.com>